Change query on other git folder

--- a/Converted query.dbquery.ipynb
+++ b/Converted query.dbquery.ipynb
@@ -14,7 +14,7 @@
    },
    "outputs": [],
    "source": [
-    "SELECT \"abc\" as textabc"
+    "SELECT \"abcd\" as textabc"
    ]
   }
  ],
@@ -24,6 +24,7 @@
    "environmentMetadata": null,
    "language": "sql",
    "notebookMetadata": {
+    "pythonIndentUnit": 2,
     "sqlQueryOptions": {
      "applyAutoLimit": true,
      "catalog": "main",
