commit since I cant discard

--- a/Converted query.dbquery.ipynb
+++ b/Converted query.dbquery.ipynb
@@ -9,6 +9,7 @@
      "inputWidgets": {},
      "nuid": "65a811dd-5a63-4d04-868c-d010f6d8174b",
      "showTitle": false,
+     "tableResultSettingsMap": {},
      "title": ""
     }
    },
@@ -33,6 +34,9 @@
    },
    "notebookName": "Converted query.dbquery.ipynb",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "sql"
   }
  },
  "nbformat": 4,
