add change to usqle query

--- a/Converted query.dbquery.ipynb
+++ b/Converted query.dbquery.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "SELECT \"abcd\" as textabc"
+    "SELECT \"modified_abcd\" as textabc"
    ]
   }
  ],
